# narvi-task

./: .gitignore  Makefile  README.md  docker-compose.yml
app/: Dockerfile  entrypoint.sh  pyproject.toml
app/src/api/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
app/src/api/migrations/: 0001_initial.py
app/src/config/: asgi.py  settings.py  wsgi.py
app/src/words/: __init__.py  tests.py  tools.py  word_trie.py
